--- a/public/index.html
+++ b/public/index.html
@@ -1,9 +1,18 @@
 <html>
   <head>
-    <title>Frontend</title>
+    <title>Clutch</title>
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link href="https://fonts.googleapis.com/css?family=Roboto:500,500i" rel="stylesheet"> 
   </head>
   <body>
+    <style>
+      @font-face {
+        font-family: 'Qanelas ExtraBold';
+        src: url('/public/fonts/qanelas-extra-bold.woff2') format('woff2'),
+            url('/fonts/qanelas-extra-bold.woff') format('woff'),
+            url('/fonts/qanelas-extra-bold.ttf') format('truetype');
+      }
+    </style>
     <div id="elm-app"></div>
     <script async src="/app.js"></script>
   </body>
