add intro fade, and logic to scroll homepage down

--- a/public/index.html
+++ b/public/index.html
@@ -12,6 +12,9 @@
             url('/fonts/qanelas-extra-bold.woff') format('woff'),
             url('/fonts/qanelas-extra-bold.ttf') format('truetype');
       }
+      body {
+        background: #292A32;
+      }
     </style>
     <div id="elm-app"></div>
     <script async src="/app.js"></script>
