addie Lottie animation based on CMS data

--- a/public/index.html
+++ b/public/index.html
@@ -1,7 +1,7 @@
 <html>
   <head>
-    <title>Clutch</title>
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>clutch</title>
+    <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0">
     <link href="https://fonts.googleapis.com/css?family=Roboto:400,500,500i" rel="stylesheet"> 
   </head>
   <body>
@@ -17,6 +17,7 @@
       }
     </style>
     <div id="elm-app"></div>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/bodymovin/4.13.0/bodymovin.js"></script>
     <script async src="/app.js"></script>
   </body>
 </html>
