block scroll case events when menu is open

--- a/public/index.html
+++ b/public/index.html
@@ -17,7 +17,7 @@
       }
     </style>
     <div id="elm-app"></div>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/bodymovin/4.13.0/bodymovin.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/bodymovin/4.13.0/bodymovin.min.js"></script>
     <script async src="/app.js"></script>
   </body>
 </html>
