add favicon, styling fixes, pause videos

--- a/public/index.html
+++ b/public/index.html
@@ -1,8 +1,10 @@
 <html>
   <head>
-    <title>clutch</title>
+    <title>clutch - make more to love</title>
+    <meta name="description" content="Wij zijn Clutch. Een digital design studio in Amsterdam. Wij zijn denkers en doeners. We helpen je met strategie, brand en services. We ontwerpen en bouwen websites, apps, prototypes en huisstijlen.">
     <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0">
     <link href="https://fonts.googleapis.com/css?family=Roboto:400,500,500i" rel="stylesheet"> 
+    <link rel="icon" href="/favicon.png">
   </head>
   <body>
     <style>
