fix broken fonts

--- a/public/index.html
+++ b/public/index.html
@@ -5,19 +5,19 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0">
     <link href="https://fonts.googleapis.com/css?family=Roboto:400,500,500i" rel="stylesheet"> 
     <link rel="icon" href="/favicon.png">
+    <style>
+     @font-face {
+         font-family: 'qanelas-extrabold';
+         src: url('/fonts/qanelas-extra-bold.woff2') format('woff2'),
+         url('/fonts/qanelas-extra-bold.woff') format('woff'),
+         url('/fonts/qanelas-extra-bold.ttf') format('truetype');
+     }
+     body {
+         background: #292A32;
+     }
+    </style>
   </head>
   <body>
-    <style>
-      @font-face {
-        font-family: 'Qanelas ExtraBold';
-        src: url('/fonts/qanelas-extra-bold.woff2') format('woff2'),
-            url('/fonts/qanelas-extra-bold.woff') format('woff'),
-            url('/fonts/qanelas-extra-bold.ttf') format('truetype');
-      }
-      body {
-        background: #292A32;
-      }
-    </style>
     <div id="elm-app"></div>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/bodymovin/5.4.2/lottie.min.js"></script>
     <script async src="/app.js"></script>
