prettify font name

--- a/public/index.html
+++ b/public/index.html
@@ -7,7 +7,7 @@
     <link rel="icon" href="/favicon.png">
     <style>
      @font-face {
-         font-family: 'qanelas-extrabold';
+         font-family: 'Qanelas ExtraBold';
          src: url('/fonts/qanelas-extra-bold.woff2') format('woff2'),
          url('/fonts/qanelas-extra-bold.woff') format('woff'),
          url('/fonts/qanelas-extra-bold.ttf') format('truetype');
