set doctype, change webpack dev server, fix bugs

--- a/index.html
+++ b/index.html
@@ -1,3 +1,4 @@
+<!DOCTYPE html>
 <html>
   <head>
     <title>clutch - make more to love</title>
@@ -8,9 +9,9 @@
     <style>
      @font-face {
          font-family: 'Qanelas ExtraBold';
-         src: url('/fonts/qanelas-extra-bold.woff2') format('woff2'),
-         url('/fonts/qanelas-extra-bold.woff') format('woff'),
-         url('/fonts/qanelas-extra-bold.ttf') format('truetype');
+         src: url('/public/fonts/qanelas-extra-bold.woff2') format('woff2'),
+         url('/public/fonts/qanelas-extra-bold.woff') format('woff'),
+         url('/public/fonts/qanelas-extra-bold.ttf') format('truetype');
      }
      body {
          background: #292A32;
@@ -20,6 +21,6 @@
   <body>
     <div id="elm-app"></div>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/bodymovin/5.4.2/lottie.min.js"></script>
-    <script async src="/app.js"></script>
+    <script async src="/public/app.js"></script>
   </body>
 </html>
