use scrollTo for changing scroll position

--- a/public/index.html
+++ b/public/index.html
@@ -1,25 +1,31 @@
-<html>
-  <head>
-    <title>clutch - make more to love</title>
-    <meta name="description" content="Wij zijn Clutch. Een digital design studio in Amsterdam. Wij zijn denkers en doeners. We helpen je met strategie, brand en services. We ontwerpen en bouwen websites, apps, prototypes en huisstijlen.">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0">
-    <link href="https://fonts.googleapis.com/css?family=Roboto:400,500,500i" rel="stylesheet"> 
-    <link rel="icon" href="/favicon.png">
-    <style>
-     @font-face {
-         font-family: 'Qanelas ExtraBold';
-         src: url('/fonts/qanelas-extra-bold.woff2') format('woff2'),
-         url('/fonts/qanelas-extra-bold.woff') format('woff'),
-         url('/fonts/qanelas-extra-bold.ttf') format('truetype');
-     }
-     body {
-         background: #292A32;
-     }
-    </style>
-  </head>
-  <body>
-    <div id="elm-app"></div>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/bodymovin/5.4.2/lottie.min.js"></script>
-    <script async src="/app.js"></script>
-  </body>
+<!DOCTYPE html>
+<html class="no-js">
+    <head>
+        <meta charset="utf-8" />
+        <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+        <link rel="icon" href="/favicon.png">
+        <title> Home </title>
+        <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0">
+        <meta name="description" content="Wij zijn denkers en doeners. We helpen je met strategie, brand en services. We ontwerpen en bouwen websites, apps, prototypes en huisstijlen."/>
+
+        <link href="https://fonts.googleapis.com/css?family=Roboto:400,500,500i" rel="stylesheet">
+        <style>
+            @font-face {
+                font-family: 'Qanelas ExtraBold';
+                src: url('/fonts/qanelas-extra-bold.woff2') format('woff2'),
+                url('/fonts/qanelas-extra-bold.woff') format('woff'),
+                url('/fonts/qanelas-extra-bold.ttf') format('truetype');
+            }
+
+            body {
+                background: #292A32;
+            }
+        </style>
+    </head>
+
+    <body class="template-homepage">
+        <div id="elm-app"></div>
+        <script src="https://cdnjs.cloudflare.com/ajax/libs/bodymovin/5.4.2/lottie.min.js"></script>
+        <script type="text/javascript" src="/app.js"></script>
+    </body>
 </html>
