change ux homepage, scroll sideways

--- a/index.html
+++ b/index.html
@@ -26,6 +26,6 @@
     <body class="template-homepage">
         <div id="elm-app"></div>
         <script src="https://cdnjs.cloudflare.com/ajax/libs/bodymovin/5.4.2/lottie.min.js"></script>
-        <script type="text/javascript" src="/app.js"></script>
+        <script type="text/javascript" src="/public/app.js"></script>
     </body>
 </html>
