--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
     <head>
         <meta charset="utf-8" />
         <meta http-equiv="X-UA-Compatible" content="IE=edge" />
-        <link rel="icon" href="/favicon.png">
+        <link rel="icon" href="/public/favicon.png">
         <title> Home </title>
         <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0">
         <meta name="description" content="Wij zijn denkers en doeners. We helpen je met strategie, brand en services. We ontwerpen en bouwen websites, apps, prototypes en huisstijlen."/>
